--- a/home.html
+++ b/home.html
@@ -104,7 +104,7 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; By Jayashree, Gopika, Amritha</p>
+        <p>&copy; By Jayashree.B.R</p>
     </footer>
 
 
